src/test/ui/suggestions/issue-73948-meta-as-module-name.stderr
error[E0463]: can't find crate for `meta`
  --> $DIR/issue-73948-meta-as-module-name.rs:13:5
   |
LL | use meta::FOO;
   |     ^^^^ can't find crate
   |
   = note: meta is a reserved crate name
help: you can use `crate::` or `self::` if you intended to refer to a local module and not a crate
   |
LL | use crate::meta::FOO;
   |     ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0463`.
